--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@
     <title>Creative</title>
 </head>
 <body>
+
     <header id="header__blog">
         <div class="wrapper">
             <nav class="navigation">
@@ -39,6 +40,7 @@
             </nav>
         </div>
     </header>
+
     <article class="article">
         <div class="wrapper">
             <h2>How to run a creative agency</h2>
@@ -209,8 +211,7 @@
             <form action="">
                 <label for="email">Signup for emails and notifications below.</label>
                 <div class="footer__form--email">
-                    <input type="email" placeholder="Enter your email"><button type="submit"><i
-                            class="fas fa-long-arrow-alt-right"></i></button>
+                    <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
                 </div>
             </form>
         </div>
@@ -219,4 +220,5 @@
         <h5>Creative Agency</h5>
     </div>
 </footer>
+
 </html>
