--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <title>Creative</title>
 </head>
 <body>
+
     <header>
         <div class="wrapper">
             <nav class="navigation">
@@ -38,7 +39,8 @@
                 <i class="fas fa-bars"></i>
             </nav>
     </header>
-    <section id="contact__title" class="contact">
+
+    <section id="contact" class="contact">
         <div class="contact__container">
             <img 
                 src="./assets/contact-1.jpeg" 
@@ -46,7 +48,7 @@
                 class="contact__image">
             <div class="wrapper">
                 <h2>Contact <span>Us</span></h2>
-                <div class="contact__title--details">
+                <div class="contact__details">
                     <h3>contact details</h3>
                     <p>If you need any help, please contact us or send us an email or go to our forum. we are sure that you can receive our
                         reply as soon as possible.</p>
@@ -126,8 +128,7 @@
             <form action="">
                 <label for="email">Signup for emails and notifications below.</label>
                 <div class="footer__form--email">
-                    <input type="email" placeholder="Enter your email"><button type="submit"><i
-                    lass="fas fa-long-arrow-alt-right"></i></button>
+                    <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
                 </div>
             </form>
         </div>
