--- a/blog.html
+++ b/blog.html
@@ -174,11 +174,14 @@
                     <input type="text" id="comment__form--subject" placeholder="Subject (optional)">
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
-                <button type="submit" class="comment__form--button">Submit comment</button>
+                <div class="comment__button">
+                    <button type="submit" class="comment__form--button">Submit comment</button>
+                </div>
             </form>
         </div>
     </section>
 </body>
+
 <footer class="footer">
     <div class="wrapper">
         <div class="footer__contact">
