--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
                 </div>
                 <i class="fas fa-bars"></i>
             </nav>
+        </div>
     </header>
 
     <section id="contact" class="contact">
@@ -50,8 +51,10 @@
                 <h2>Contact <span>Us</span></h2>
                 <div class="contact__details">
                     <h3>contact details</h3>
-                    <p>If you need any help, please contact us or send us an email or go to our forum. we are sure that you can receive our
-                        reply as soon as possible.</p>
+                    <p>
+                        If you need any help, please contact us or send us an email or go to our forum. we are sure that you can receive our
+                        reply as soon as possible.
+                    </p>
                 </div>
                 <div class="contact__icons">
                     <div class="contact__icons--item">
@@ -76,65 +79,71 @@
                     <h3>Get in touch with us</h3>
                     <p>If you have any questions, Please don't hesitate to send us a message</p>
                 </div>
-                <section id="comment__form">
-                        <form action="" class="comment__form">
-                            <div class="comment__form--container">
-                                <input type="text" id="comment__form--name" placeholder="Enter your name..." required>
-                                <input type="email" name="" id="comment__form--email" placeholder="Enter your email" required>
-                                <input type="text" id="comment__form--subject" placeholder="Subject (optional)">
-                            </div>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
-                            <button type="submit" class="comment__form--button">Send message</button>
-                        </form>
-                    </div>
-                </section>
-                <img 
-                    src="./assets/contact-2.jpeg" 
-                    alt="An image of a woman smiling while talking on the phone." 
-                    class="contact__image">
             </div>
         </div>
     </section>
-</body>
-<footer class="footer">
-    <div class="wrapper">
-        <div class="footer__contact">
-            <h5>Contact us</h5>
-            <ul>
-                <li>6591 Orchard Street, NY 10002, United States</li>
-                <li>Email: contact@onepro.co</li>
-                <li>Phone 01: +00 (9) 123 3456 789</li>
-                <li>Phone 02: +00 (9) 123 3456 788</li>
-                <li>Fax: +00 (9) 643 6543 898</li>
-            </ul>
-            <div class="footer__sm">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-instagram"></i>
-            </div>
-        </div>
-        <div class="footer__posts">
-            <h5>recent posts</h5>
-            <ul>
-                <li>Conversion hackathon partner</li>
-                <li>Network channels entrepreneur</li>
-                <li>Return on investment creative</li>
-                <li>Assets interaction design venture</li>
-                <li>Infographic learning curve</li>
-            </ul>
-        </div>
-        <div class="footer__form">
-            <h5>Twitter widget</h5>
-            <form action="">
-                <label for="email">Signup for emails and notifications below.</label>
-                <div class="footer__form--email">
-                    <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+
+    <section id="comment__form">
+        <div class="wrapper">
+            <form action="" class="comment__form">
+                <div class="comment__form--container">
+                    <input type="text" id="comment__form--name" placeholder="Enter your name..." required>
+                    <input type="email" name="" id="comment__form--email" placeholder="Enter your email" required>
+                    <input type="text" id="comment__form--subject" placeholder="Subject (optional)">
+                </div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
+                <div class="comment__button">
+                    <button type="submit" class="comment__form--button">Send message</button>
                 </div>
             </form>
         </div>
-    </div>
-    <div class="footer__logo">
-        <h5>Creative Agency</h5>
-    </div>
-</footer>
+    </section>
+
+    <section id="banner-image">
+        <img src="./assets/contact-2.jpeg" alt="An image of a woman smiling while talking on the phone." class="contact__image">
+    </section>
+
+</body>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__contact">
+                <h5>Contact us</h5>
+                <ul>
+                    <li>6591 Orchard Street, NY 10002, United States</li>
+                    <li>Email: contact@onepro.co</li>
+                    <li>Phone 01: +00 (9) 123 3456 789</li>
+                    <li>Phone 02: +00 (9) 123 3456 788</li>
+                    <li>Fax: +00 (9) 643 6543 898</li>
+                </ul>
+                <div class="footer__sm">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+            </div>
+            <div class="footer__posts">
+                <h5>recent posts</h5>
+                <ul>
+                    <li>Conversion hackathon partner</li>
+                    <li>Network channels entrepreneur</li>
+                    <li>Return on investment creative</li>
+                    <li>Assets interaction design venture</li>
+                    <li>Infographic learning curve</li>
+                </ul>
+            </div>
+            <div class="footer__form">
+                <h5>Twitter widget</h5>
+                <form action="">
+                    <label for="email">Signup for emails and notifications below.</label>
+                    <div class="footer__form--email">
+                        <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="footer__logo">
+            <h5>Creative Agency</h5>
+        </div>
+    </footer>
 </html>
