final, final changes before submission

--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,7 @@
 
     <section id="contact" class="contact">
         <div class="contact__container">
-            <img 
-                src="./assets/contact-1.jpeg" 
-                alt="A close-up image of a keyboard and plant." 
-                class="contact__image">
+            <img src="./assets/contact-1.jpeg" alt="A close-up image of a keyboard and plant." class="contact__image">
             <div class="wrapper">
                 <h2>Contact <span>Us</span></h2>
                 <div class="contact__details">
