--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
                     <div class="branding__image--top">
                         <img src="./assets/home-circle-text.png" alt="An image depicting text in the shape of a circle." class="circle-img">
                     </div>
-                    <img 
-                        src="./assets/home-2.jpeg" 
-                        alt="An image of a desk with a computer, a small plant, and a scent diffuser." 
-                        class="homeImg-2">
+                    <img src="./assets/home-2.jpeg" alt="An image of a desk with a computer, a small plant, and a scent diffuser." class="homeImg-2">
                 </div>
             </div>
             <div class="branding__content">
@@ -68,10 +65,7 @@
             <div class="wrapper">
                 <div class="slider__container">
                     <i class="fas fa-angle-left"></i>
-                    <img 
-                        src="./assets/home-3.jpeg" 
-                        alt="A image of a male model in a magazine article" 
-                        class="slider__container--image">
+                    <img src="./assets/home-3.jpeg" alt="A image of a male model in a magazine article" class="slider__container--image">
                     <i class="fas fa-angle-right"></i>
                 </div>
                 <p>
@@ -181,11 +175,7 @@
                 </p>
                 <button>View Portfolio</button>
             </div>
-            <img 
-                src="./assets/home-10.jpeg" 
-                alt="An image showing a smartphone, coffee, and a folder full of documents on a desk."
-                class="portfolio__image"
-                >
+            <img src="./assets/home-10.jpeg" alt="An image showing a smartphone, coffee, and a folder full of documents on a desk." class="portfolio__image">
         </section>
     </main>
     
