--- a/blog.html
+++ b/blog.html
@@ -115,21 +115,15 @@
             <h2>Related Posts</h2>
             <div class="posts__container">
                 <div class="posts__post">
-                    <img 
-                        src="./assets/blog-3.jpeg" 
-                        alt="An image of a desk with a lamp, a few house plants, a pair of glasses, and a laptop.">
+                    <img src="./assets/blog-3.jpeg" alt="An image of a desk with a lamp, a few house plants, a pair of glasses, and a laptop.">
                     <p>July, 25, 2018</p>
                 </div>
                 <div class="posts__post">
-                    <img 
-                        src="./assets/blog-4.jpeg" 
-                        alt="An image of a desk with a couple of plants, a giant decorative 'A' letter, and several unlit candles.">
+                    <img src="./assets/blog-4.jpeg" alt="An image of a desk with a couple of plants, a giant decorative 'A' letter, and several unlit candles.">
                     <p>July, 26, 2018</p>
                 </div>
                 <div class="posts__post">
-                    <img 
-                        src="./assets/blog-5.jpeg" 
-                        alt="An close-up image of a smartphone, laptop keyboard, and small plant.">
+                    <img src="./assets/blog-5.jpeg" alt="An close-up image of a smartphone, laptop keyboard, and small plant.">
                     <p>July, 28, 2018</p>
                 </div>
             </div>
