final, final commit b4 submission

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Creative</title>
 </head>
 <body>
-    <header id="header-main">
+    <header id="header__main" class="header__main">
         <div class="wrapper">
             <nav class="navigation">
                 <div class="navigation__container">
@@ -28,10 +28,12 @@
                 <h1 class="navigation__logo"><a href="index.html">Creative</a></h1>
                 <div class="navigation__container">
                     <ul class="navigation__list">
-                        <li class="navigation__item"><a href="#" class="link">Shop</a></li>
-                        <li class="navigation__item"><a href="contact.html" class="link">Contact</a></li>
-                        <li class="navigation__item"><a href="#"><i class="fas fa-search"></i></a></li>
-                        <li class="navigation__item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                        <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
+                        <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
+                        <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
+                        <span class="sr-only">Icon indicating a magnifying glass, use to search website.</span>
+                        <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                        <span class="sr-only">Icon indicating a shopping bag, use to access cart.</span>
                     </ul>
                 </div>
                 <i class="fas fa-bars"></i>
@@ -64,7 +66,7 @@
             </div>
         </section>
 
-        <section id="slider">
+        <section id="slider" class="slider">
             <div class="wrapper">
                 <div class="slider__container">
                     <i class="fas fa-angle-left"></i>
@@ -90,6 +92,7 @@
                     <div class="features__container--content">
                         <div class="features__container--icon">
                             <i class="fas fa-magic"></i>
+                            <span class="sr-only">Icon indicating magic wand</span>
                         </div>
                         <div class="features__container--copy">
                             <h3>Unique Design</h3>
@@ -99,6 +102,7 @@
                     <div class="features__container--content">
                         <div class="features__container--icon">
                             <i class="fas fa-map-pin"></i>
+                            <span class="sr-only">Icon indicating map pin</span>
                         </div>
                         <div class="features__container--copy">
                             <h3>Seo Marketing</h3>
@@ -110,6 +114,7 @@
                     <div class="features__container--content">
                         <div class="features__container--icon">
                             <i class="fas fa-desktop"></i>
+                            <span class="sr-only">Icon indicating computer screen</span>
                         </div>
                         <div class="features__container--copy">
                             <h3>Retina Ready</h3>
@@ -119,6 +124,7 @@
                     <div class="features__container--content">
                         <div class="features__container--icon">
                             <i class="fas fa-shopping-bag"></i>
+                            <span class="sr-only">Icon indicating shopping bag</span>
                         </div>
                         <div class="features__container--copy">
                             <h3>Ecommerce Ready</h3>
@@ -130,6 +136,7 @@
                     <div class="features__container--content">
                         <div class="features__container--icon">
                             <i class="fas fa-sliders-h"></i>
+                            <span class="sr-only">Icon indicating audio sliders</span>
                         </div>
                         <div class="features__container--copy">
                             <h3>Advanced Options</h3>
@@ -139,6 +146,7 @@
                     <div class="features__container--content">
                         <div class="features__container--icon">
                             <i class="fas fa-smile"></i>
+                            <span class="sr-only">Icon indicating a smiley face</span>
                         </div>
                         <div class="features__container--copy">
                             <h3>Customizable</h3>
@@ -202,8 +210,11 @@
                 </ul>
                 <div class="footer__sm">
                     <i class="fab fa-facebook-f"></i>
+                    <a class="sr-only" href="facebook.com">Link to Facebook</a>
                     <i class="fab fa-twitter"></i>
+                    <a class="sr-only" href="twitter.com">Link to Twitter</a>
                     <i class="fab fa-instagram"></i>
+                    <a class="sr-only" href="instagram.com">Link to Instagram</a>
                 </div>
             </div>
             <div class="footer__posts">
