--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <header id="header__blog">
+    <header id="header__blog" class="header__blog">
         <div class="wrapper">
             <nav class="navigation">
                 <div class="navigation__container">
@@ -33,7 +33,9 @@
                         <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
                         <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
+                        <span class="sr-only">Icon indicating a magnifying glass, use to search website.</span>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                        <span class="sr-only">Icon indicating a shopping bag, use to access cart.</span>
                     </ul>
                 </div>
                 <i class="fas fa-bars"></i>
@@ -103,8 +105,11 @@
                 <p>Share:</p>
                 <div class="icons">
                     <i class="fab fa-facebook-f"></i>
+                    <a class="sr-only" href="facebook.com">Link to Facebook</a>
                     <i class="fab fa-twitter"></i>
+                    <a class="sr-only" href="twitter.com">Link to Twitter</a>
                     <i class="fab fa-instagram"></i>
+                    <a class="sr-only" href="instagram.com">Link to Instagram</a>
                 </div>
             </div>
         </div>
@@ -164,13 +169,13 @@
         </div>
     </section>
 
-    <section id="comment__form">
+    <section id="comment__form" class="form">
         <div class="wrapper">
             <h2>Leave a comment</h2>
             <form action="" class="comment__form">
                 <div class="comment__form--container">
                     <input type="text" id="comment__form--name" placeholder="Enter your name..." required>
-                    <input type="email" name="" id="comment__form--email" placeholder="Enter your email" required>
+                    <input type="email" name="" id="comment__form--email" class="form__email" placeholder="Enter your email" required>
                     <input type="text" id="comment__form--subject" placeholder="Subject (optional)">
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
@@ -195,8 +200,11 @@
             </ul>
             <div class="footer__sm">
                 <i class="fab fa-facebook-f"></i>
+                <a class="sr-only" href="facebook.com">Link to Facebook</a>
                 <i class="fab fa-twitter"></i>
+                <a class="sr-only" href="twitter.com">Link to Twitter</a>
                 <i class="fab fa-instagram"></i>
+                <a class="sr-only" href="instagram.com">Link to Instagram</a>
             </div>
         </div>
         <div class="footer__posts">
