--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,9 @@
                         <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
                         <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
+                        <span class="sr-only">Icon indicating a magnifying glass, use to search website.</span>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                        <span class="sr-only">Icon indicating a shopping bag, use to access cart.</span>
                     </ul>
                 </div>
                 <i class="fas fa-bars"></i>
@@ -83,12 +85,12 @@
         </div>
     </section>
 
-    <section id="comment__form">
+    <section id="comment__form" class="form">
         <div class="wrapper">
             <form action="" class="comment__form">
                 <div class="comment__form--container">
                     <input type="text" id="comment__form--name" placeholder="Enter your name..." required>
-                    <input type="email" name="" id="comment__form--email" placeholder="Enter your email" required>
+                    <input type="email" name="" id="comment__form--email" class="form__email" placeholder="Enter your email" required>
                     <input type="text" id="comment__form--subject" placeholder="Subject (optional)">
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
@@ -118,8 +120,11 @@
                 </ul>
                 <div class="footer__sm">
                     <i class="fab fa-facebook-f"></i>
+                    <a class="sr-only" href="facebook.com">Link to Facebook</a>
                     <i class="fab fa-twitter"></i>
+                    <a class="sr-only" href="twitter.com">Link to Twitter</a>
                     <i class="fab fa-instagram"></i>
+                    <a class="sr-only" href="instagram.com">Link to Instagram</a>
                 </div>
             </div>
             <div class="footer__posts">
