final commit b4 Submission

--- a/blog.html
+++ b/blog.html
@@ -174,7 +174,7 @@
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
                 <div class="comment__button">
-                    <button type="submit" class="comment__form--button">Submit comment</button>
+                    <button type="submit" class="comment__form--button" aria-label="Button to submit comment">Submit comment</button>
                 </div>
             </form>
         </div>
@@ -217,6 +217,7 @@
                 <label for="email">Signup for emails and notifications below.</label>
                 <div class="footer__form--email">
                     <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                    <span class="sr-only">Click to submit email</span>
                 </div>
             </form>
         </div>
