--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     Deployment validation gen-z disruptive paradigm shift churn rate niche market graphical 
                     user interface.
                 </p>
-                <button>View Portfolio</button>
+                <button aria-label="Button to view portfolio">View Portfolio</button>
             </div>
             <img src="./assets/home-10.jpeg" alt="An image showing a smartphone, coffee, and a folder full of documents on a desk." class="portfolio__image">
         </section>
@@ -223,6 +223,7 @@
                     <label for="email">Signup for emails and notifications below.</label>
                     <div class="footer__form--email">
                         <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                        <span class="sr-only">Click to submit email</span>
                     </div>
                 </form>
             </div>
