--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
                 <div class="comment__button">
-                    <button type="submit" class="comment__form--button">Send message</button>
+                    <button type="submit" class="comment__form--button" aria-label="Button to send message">Send message</button>
                 </div>
             </form>
         </div>
@@ -139,7 +139,8 @@
                 <form action="">
                     <label for="email">Signup for emails and notifications below.</label>
                     <div class="footer__form--email">
-                        <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                        <input type="email" placeholder="Enter your email"><button type="submit" aria-label="Button to submit email"><i class="fas fa-long-arrow-alt-right"></i></button>
+                        <span class="sr-only">Click to submit email</span>
                     </div>
                 </form>
             </div>
