final changes for accessability

--- a/contact.html
+++ b/contact.html
@@ -58,17 +58,20 @@
                 <div class="contact__icons">
                     <div class="contact__icons--item">
                         <i class="fas fa-mobile-alt"></i>
+                        <span class="sr-only">Phone Number:</span>
                         <h3>Phone</h3>
                         <p>Phone 01: 123, 456 7890</p>
                         <p>Phone 02: 345 678 9101</p>
                     </div>
                     <div class="contact__icons--item">
                         <i class="fas fa-map-marker-alt"></i>
+                        <span class="sr-only">Location:</span>
                         <h3>Address</h3>
                         <p>6591 Orchard Street, Toronto, Ontario</p>
                     </div>
                     <div class="contact__icons--item">
                         <i class="fas fa-envelope"></i>
+                        <span class="sr-only">Email:</span>
                         <h3>Email</h3>
                         <p>contact@creative.com</p>
                         <p>info@creative.com</p>
