--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
             <div class="wrapper">
                 <div class="slider__container">
                     <i class="fas fa-angle-left"></i>
+                    <span class="sr-only">Click for previous image</span>
                     <img src="./assets/home-3.jpeg" alt="A image of a male model in a magazine article" class="slider__container--image">
                     <i class="fas fa-angle-right"></i>
+                    <span class="sr-only">Click for next image</span>
                 </div>
                 <p>
                     Ecosystem iPad disruptive social media low hanging fruit stealth launch party handshake market branding.
