added js/mobile navigation

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,15 @@
                 <i class="fas fa-bars"></i>
             </nav>
         </div>
+        <nav class="navigation__mobile hideNav">
+            <ul>
+                <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
+                <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
+                <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
+                <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
+                <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="contact" class="contact">
@@ -105,51 +114,53 @@
         <img src="./assets/contact-2.jpeg" alt="An image of a woman smiling while talking on the phone." class="contact__image">
     </section>
 
-</body>
-
-    <footer class="footer">
-        <div class="wrapper">
-            <div class="footer__contact">
-                <h5>Contact us</h5>
-                <ul>
-                    <li>6591 Orchard Street, NY 10002, United States</li>
-                    <li>Email: contact@onepro.co</li>
-                    <li>Phone 01: +00 (9) 123 3456 789</li>
-                    <li>Phone 02: +00 (9) 123 3456 788</li>
-                    <li>Fax: +00 (9) 643 6543 898</li>
-                </ul>
-                <div class="footer__sm">
-                    <i class="fab fa-facebook-f"></i>
-                    <a class="sr-only" href="facebook.com">Link to Facebook</a>
-                    <i class="fab fa-twitter"></i>
-                    <a class="sr-only" href="twitter.com">Link to Twitter</a>
-                    <i class="fab fa-instagram"></i>
-                    <a class="sr-only" href="instagram.com">Link to Instagram</a>
+        <footer class="footer">
+            <div class="wrapper">
+                <div class="footer__contact">
+                    <h5>Contact us</h5>
+                    <ul>
+                        <li>6591 Orchard Street, NY 10002, United States</li>
+                        <li>Email: contact@onepro.co</li>
+                        <li>Phone 01: +00 (9) 123 3456 789</li>
+                        <li>Phone 02: +00 (9) 123 3456 788</li>
+                        <li>Fax: +00 (9) 643 6543 898</li>
+                    </ul>
+                    <div class="footer__sm">
+                        <i class="fab fa-facebook-f"></i>
+                        <a class="sr-only" href="facebook.com">Link to Facebook</a>
+                        <i class="fab fa-twitter"></i>
+                        <a class="sr-only" href="twitter.com">Link to Twitter</a>
+                        <i class="fab fa-instagram"></i>
+                        <a class="sr-only" href="instagram.com">Link to Instagram</a>
+                    </div>
+                </div>
+                <div class="footer__posts">
+                    <h5>recent posts</h5>
+                    <ul>
+                        <li>Conversion hackathon partner</li>
+                        <li>Network channels entrepreneur</li>
+                        <li>Return on investment creative</li>
+                        <li>Assets interaction design venture</li>
+                        <li>Infographic learning curve</li>
+                    </ul>
+                </div>
+                <div class="footer__form">
+                    <h5>Twitter widget</h5>
+                    <form action="">
+                        <label for="email">Signup for emails and notifications below.</label>
+                        <div class="footer__form--email">
+                            <input type="email" placeholder="Enter your email"><button type="submit"
+                                aria-label="Button to submit email"><i class="fas fa-long-arrow-alt-right"></i></button>
+                            <span class="sr-only">Click to submit email</span>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="footer__posts">
-                <h5>recent posts</h5>
-                <ul>
-                    <li>Conversion hackathon partner</li>
-                    <li>Network channels entrepreneur</li>
-                    <li>Return on investment creative</li>
-                    <li>Assets interaction design venture</li>
-                    <li>Infographic learning curve</li>
-                </ul>
+            <div class="footer__logo">
+                <h5>Creative Agency</h5>
             </div>
-            <div class="footer__form">
-                <h5>Twitter widget</h5>
-                <form action="">
-                    <label for="email">Signup for emails and notifications below.</label>
-                    <div class="footer__form--email">
-                        <input type="email" placeholder="Enter your email"><button type="submit" aria-label="Button to submit email"><i class="fas fa-long-arrow-alt-right"></i></button>
-                        <span class="sr-only">Click to submit email</span>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="footer__logo">
-            <h5>Creative Agency</h5>
-        </div>
-    </footer>
+        </footer>
+<script src="app.js"></script>
+</body>
+
 </html>
