--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <header id="header__main" class="header__main">
-        <div class="wrapper">
-            <nav class="navigation">
+        <nav class="navigation">    
+            <div class="wrapper navigation__wrapper">
                 <div class="navigation__container">
                     <ul class="navigation__list">
                         <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
@@ -37,8 +37,17 @@
                     </ul>
                 </div>
                 <i class="fas fa-bars"></i>
-            </nav>
-        </div>
+            </div>
+        </nav>
+        <nav class="navigation__mobile hideNav">
+            <ul>
+                <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
+                <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
+                <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
+                <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
+                <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
@@ -234,6 +243,6 @@
             <h5>Creative Agency</h5>
         </div>
     </footer>
-
+<script src="app.js"></script>
 </body>
 </html>
