added functionality to slider section

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <nav class="navigation">    
             <div class="wrapper navigation__wrapper">
                 <div class="navigation__container">
-                    <ul class="navigation__list">
+                    <ul class="navigation__list--left">
                         <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
                         <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
                         <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
                     </ul>
                 </div>
-                <h1 class="navigation__logo"><a href="index.html">Creative</a></h1>
+                <h1 class="navigation__logo"><a href="index.html" class="navigation__logo--link">Creative</a></h1>
                 <div class="navigation__container">
-                    <ul class="navigation__list">
+                    <ul class="navigation__list--right">
                         <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
                         <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
@@ -243,6 +243,7 @@
             <h5>Creative Agency</h5>
         </div>
     </footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
