--- a/contact.html
+++ b/contact.html
@@ -18,18 +18,18 @@
 <body>
 
     <header>
-        <div class="wrapper">
-            <nav class="navigation">
+        <nav class="navigation">
+            <div class="wrapper navigation__wrapper">
                 <div class="navigation__container">
-                    <ul class="navigation__list">
-                        <li class="navigation__list--item"><a href="index.html" class="link">Home</a></li>
-                        <li class="navigation__list--item"><a href="blog.html" class="link">Blog</a></li>
-                        <li class="navigation__list--item"><a href="index.html#portfolio" class="link">Portfolio</a></li>
+                    <ul class="navigation__list--left">
+                        <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
+                        <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
+                        <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
                     </ul>
                 </div>
-                <h1 class="navigation__logo"><a href="index.html">Creative</a></h1>
+                <h1 class="navigation__logo"><a href="index.html" class="navigation__logo">Creative</a></h1>
                 <div class="navigation__container">
-                    <ul class="navigation__list">
+                    <ul class="navigation__list--right">
                         <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
                         <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
@@ -39,8 +39,8 @@
                     </ul>
                 </div>
                 <i class="fas fa-bars"></i>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <nav class="navigation__mobile hideNav">
             <ul>
                 <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
