--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                 <h5>Creative Agency</h5>
             </div>
         </footer>
-<script src="app.js"></script>
+<script src="navbar.js"></script>
 </body>
 
 </html>
