--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <h5>Creative Agency</h5>
         </div>
     </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-<script src="app.js"></script>
+<script src="navbar.js"></script>
+<script src="slider.js"></script>
 </body>
 </html>
