tweaked navigation styles, added scroll behaviour

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-    <header>
-        <nav class="navigation">
+    <header class="header__contact">
+        <nav class="navigation navigation__contact">
             <div class="wrapper navigation__wrapper">
                 <div class="navigation__container">
                     <ul class="navigation__list--left">
