added inital functionality for blog comments

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     </ul>
                 </div>
                 <i class="fas fa-bars"></i>
+                <span class="sr-only">Icon indicating a hamburger navigation.</span>
             </div>
         </nav>
         <nav class="navigation__mobile hideNav">
