added more blog functionality

--- a/blog.html
+++ b/blog.html
@@ -145,7 +145,7 @@
     </section>
 
     <section id="comments" class="comments">
-        <div class="wrapper">
+        <div class="wrapper comments__wrapper">
             <h2>02 Comments</h2>
             <div class="comment">
                 <div class="comment__image">
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="comment">
-                <div class="">
+                <div class="comment__image">
                     <img src="./assets/blog-7.jpeg" alt="A profile picture of a smiling man in a white shirt.">
                 </div>
                 <div class="comment__container">
