--- a/blog.html
+++ b/blog.html
@@ -146,7 +146,7 @@
 
     <section id="comments" class="comments">
         <div class="wrapper comments__wrapper">
-            <h2>02 Comments</h2>
+            <h2><span class="comments__number">02</span> Comments</h2>
             <div class="comment">
                 <div class="comment__image">
                     <img src="./assets/blog-6.jpeg" alt="An profile picture of a red haired woman.">
