--- a/blog.html
+++ b/blog.html
@@ -183,7 +183,7 @@
                 </div>
                 <textarea name="" id="comment__textarea" cols="30" rows="10" placeholder="Here goes your comment"></textarea>
                 <div class="comment__button">
-                    <button type="submit" class="comment__form--button" aria-label="Button to submit comment">Submit comment</button>
+                    <input type="submit" id="comment__form--button" aria-label="Button to submit comment" value="Submit comment"></input>
                 </div>
             </form>
         </div>
