--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <h1 class="navigation__logo"><a href="index.html" class="navigation__logo--link">Creative</a></h1>
                 <div class="navigation__container">
                     <ul class="navigation__list--right">
-                        <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
-                        <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
-                        <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
+                        <li class="navigation__item"><a href="#" class="link">Shop</a></li>
+                        <li class="navigation__item"><a href="contact.html" class="link">Contact</a></li>
+                        <li class="navigation__item"><a href="#"><i class="fas fa-search"></i></a></li>
                         <span class="sr-only">Icon indicating a magnifying glass, use to search website.</span>
-                        <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                        <li class="navigation__item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                         <span class="sr-only">Icon indicating a shopping bag, use to access cart.</span>
                     </ul>
                 </div>
@@ -42,11 +42,11 @@
         </nav>
         <nav class="navigation__mobile hideNav">
             <ul>
-                <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
-                <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
-                <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
-                <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
-                <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
+                <li class="navigation__item--mobile"><a href="index.html" class="link">Home</a></li>
+                <li class="navigation__item--mobile"><a href="blog.html" class="link">Blog</a></li>
+                <li class="navigation__item--mobile"><a href="#portfolio" class="link">Portfolio</a></li>
+                <li class="navigation__item--mobile"><a href="#" class="link">Shop</a></li>
+                <li class="navigation__item--mobile"><a href="contact.html" class="link">Contact</a></li>
             </ul>
         </nav>
     </header>
