--- a/blog.html
+++ b/blog.html
@@ -41,13 +41,13 @@
                 <i class="fas fa-bars"></i>
             </div>
         </nav>
-            <nav class="navigation__mobile hideNav">
+            <nav class="navigation__mobile hideNav" aria-label="nav mobile-nav">
                 <ul>
-                    <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
-                    <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
-                    <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
-                    <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
-                    <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
+                    <li class="navigation__item--mobile"><a href="index.html" class="link">Home</a></li>
+                    <li class="navigation__item--mobile"><a href="blog.html" class="link">Blog</a></li>
+                    <li class="navigation__item--mobile"><a href="#portfolio" class="link">Portfolio</a></li>
+                    <li class="navigation__item--mobile"><a href="#" class="link">Shop</a></li>
+                    <li class="navigation__item--mobile"><a href="contact.html" class="link">Contact</a></li>
                 </ul>
             </nav>
     </header>
@@ -152,7 +152,7 @@
                     <img src="./assets/blog-6.jpeg" alt="An profile picture of a red haired woman.">
                 </div>
                 <div class="comment__container">
-                    <h3 class="comment__name">Jenifer Loopz <span><a href="#"> - reply</a></span></h3>
+                    <h3 class="comment__name">Jenifer Loopz <span><a href="#form"> - reply</a></span></h3>
                     <p class="comment__text">Ecosystem iPad disruptive social media low hanging fruit stealth launch
                         party handshake market branding.</p>
                     <p class="comment__date">Jul 17, 2015 at 15 hours ago</p>
@@ -163,7 +163,7 @@
                     <img src="./assets/blog-7.jpeg" alt="A profile picture of a smiling man in a white shirt.">
                 </div>
                 <div class="comment__container">
-                    <h3 class="comment__name">Daniel Vandaft <span><a href="#"> - reply</a></span></h3>
+                    <h3 class="comment__name">Daniel Vandaft <span><a href="#form"> - reply</a></span></h3>
                     <p class="comment__text">Pitch agile development business plan stelth channels prototype mass market
                         product management value proposition startup strategy.</p>
                     <p class="comment__date">Jul 17, 2015 at 15 hours ago</p>
@@ -235,8 +235,8 @@
             <h5>Creative Agency</h5>
         </div>
     </footer>
-<script src="navbar.js"></script>
-<script src="form.js"></script>
+    <script src="navbar.js"></script>
+    <script src="form.js"></script>
 </body>
 
 </html>
