--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                         <span class="sr-only">Icon indicating a shopping bag, use to access cart.</span>
                     </ul>
                 </div>
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars" aria-label="hamburger nav icon"></i>
                 <span class="sr-only">Icon indicating a hamburger navigation.</span>
             </div>
         </nav>
-        <nav class="navigation__mobile hideNav">
+        <nav class="navigation__mobile hideNav" aria-label="nav mobile-nav">
             <ul>
                 <li class="navigation__item--mobile"><a href="index.html" class="link">Home</a></li>
                 <li class="navigation__item--mobile"><a href="blog.html" class="link">Blog</a></li>
@@ -244,7 +244,7 @@
             <h5>Creative Agency</h5>
         </div>
     </footer>
-<script src="navbar.js"></script>
-<script src="slider.js"></script>
+    <script src="navbar.js"></script>
+    <script src="slider.js"></script>
 </body>
 </html>
