--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <label for="email">Signup for emails and notifications below.</label>
                     <div class="footer__form--email">
                         <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
-                        <span class="sr-only">Click to submit email</span>
+                        <span class="sr-only">Click To Submit Email</span>
                     </div>
                 </form>
             </div>
